EU-82; Update README, Development section
Describe how to run project locally (not inside docker container).

--- a/local/example.env
+++ b/local/example.env
@@ -3,7 +3,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
-# these veriables are required by application
+# these variables are required by application
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 PGADMIN_DEFAULT_EMAIL=user@example.com
 PGADMIN_DEFAULT_PASSWORD=x
 TOKEN_LIFE_TIME=3600
