--- a/local/docker-compose.example.yml
+++ b/local/docker-compose.example.yml
@@ -7,6 +7,8 @@ services:
       - .env  # must define POSTGRES_USER, POSTGRES_PASSWORD and POSTGRES_DB
     volumes:
       - database-data:/var/lib/postgresql/data/  # persist data
+    ports:
+      - '5432:5432'  # required to access DB from host system
   backend:
     build: .
     environment:
