--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.8"
 fastapi = "0.78.0"
-pydantic = "1.9.1"
+pydantic = {extras = ["doenv"], version = "^1.10.2"}
 uvicorn = "0.17.6"
 asyncpg = "0.25.0"
 psycopg2-binary = "2.9.3"
