Fix Pathlib issues, update settings.py

--- a/local/example.env
+++ b/local/example.env
@@ -1,12 +1,14 @@
 # these variables are required by docker-compose.yml, fill with any strings
+POSTGRES_HOST=postgres
+#POSTGRES_HOST=0.0.0.0  # uncomment for debugger (PyCharm)
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
-# these variables are required by application
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
+# these variables are required for PGAdmin
 PGADMIN_DEFAULT_EMAIL=user@example.com
 PGADMIN_DEFAULT_PASSWORD=x
-TOKEN_LIFE_TIME=3600
+
+# these variables are required by application
 JWT_SECRET_KEY=x
 JWT_REFRESH_SECRET_KEY=x
