--- a/local/example.env
+++ b/local/example.env
@@ -1,6 +1,7 @@
-# these variables are required by docker-compose.yml, fill with any strings
-POSTGRES_HOST=postgres
-#POSTGRES_HOST=0.0.0.0  # uncomment for debugger (PyCharm)
+# POSTGRES_{USER,PASSWORD,DB} are used by postgres docker image
+# refer https://hub.docker.com/_/postgres/
+POSTGRES_HOST=0.0.0.0
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
