--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-jose = {version = "3.3.0", extras = ["cryptography"]}
 passlib = {version = "1.7.4", extras = ["bcrypt"]}
 python-multipart = "0.0.5"
 docxtpl = "0.16.0"
+xlrd = "1.2.0"
 
 
 [build-system]
