--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,23 @@ python-multipart = "0.0.5"
 docxtpl = "0.16.0"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.0"
+pytest-asyncio = "^0.20.1"
+pytest-mock = "^3.10.0"
+pytest-sugar = "^0.9.6"
+pytest-cov = "^4.0.0"
+faker = "^15.3.1"
+
+
+
+[tool.poetry.group.lint.dependencies]
+black = "^22.10.0"
+flake8-docstrings = "^1.6.0"
+xenon = "^0.9.0"
+isort = "^5.10.1"
+mypy = "^0.990"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
