--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,6 @@ python = "~3.8"
 fastapi = "0.78.0"
 pydantic = {extras = ["dotenv"], version = "^1.10.2"}
 uvicorn = "0.17.6"
-asyncpg = "0.25.0"
-psycopg2-binary = "2.9.3"
-databases = "0.6.0"
 translitua = "1.3.1"
 python-jose = {version = "3.3.0", extras = ["cryptography"]}
 passlib = {version = "1.7.4", extras = ["bcrypt"]}
@@ -36,6 +33,11 @@ pytest-mock = "^3.10.0"
 pytest-sugar = "^0.9.6"
 pytest-cov = "^4.0.0"
 faker = "^15.3.1"
+
+
+[tool.poetry.group.database.dependencies]
+psycopg2-binary = "^2.9.3"
+asyncpg = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
