--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.8"
 fastapi = "0.78.0"
-pydantic = {extras = ["dotenv"], version = "^1.10.2"}
 uvicorn = "0.17.6"
-translitua = "1.3.1"
-python-jose = {version = "3.3.0", extras = ["cryptography"]}
-passlib = {version = "1.7.4", extras = ["bcrypt"]}
-python-multipart = "0.0.5"
-docxtpl = "0.16.0"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -35,10 +29,25 @@ pytest-cov = "^4.0.0"
 faker = "^15.3.1"
 
 
+[tool.poetry.group.documents.dependencies]
+docxtpl = "0.16.0"
+translitua = "1.3.1"
+
+
+[tool.poetry.group.security.dependencies]
+passlib = {version = "1.7.4", extras = ["bcrypt"]}
+python-jose = {version = "3.3.0", extras = ["cryptography"]}
+
+
+[tool.poetry.group.parcing.dependencies]
+pydantic = {version = "^1.10.2", extras = ["doenv"]}
+python-multipart = "0.0.5"
+
+
 [tool.poetry.group.database.dependencies]
-psycopg2-binary = "^2.9.3"
-asyncpg = "^0.25.0"
-databases = "^0.6.0"
+asyncpg = "0.25.0"
+psycopg2-binary = "2.9.3"
+databases = "0.6.0"
 
 [build-system]
 requires = ["poetry-core"]
