--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest-mock = "^3.10.0"
 pytest-sugar = "^0.9.6"
 pytest-cov = "^4.0.0"
 faker = "^15.3.1"
+coverage = "^6.5.0"
 
 
 [tool.poetry.group.documents.dependencies]
@@ -48,6 +49,10 @@ python-multipart = "0.0.5"
 asyncpg = "0.25.0"
 psycopg2-binary = "2.9.3"
 databases = "0.6.0"
+
+
+[tool.poetry.group.dev.dependencies]
+ipython = "^8.6.0"
 
 [build-system]
 requires = ["poetry-core"]
