EU-79 define max length og lines is 88 symbols, format .y files using black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
+line-length = 88
 include = '\.pyi?$'
 extend-exclude = '''
 /(
