EU-81 changed alembic.ini and env.py, added sqlalchemy-utils and python-dateutil to pyproject.toml

--- a/alembic.ini
+++ b/alembic.ini
@@ -2,15 +2,14 @@
 
 [alembic]
 script_location = alembic
-file_template = %%(rev)s_%%(slug)s
+file_template = %%(slug)s
 prepend_sys_path = .
 timezone = UTC
 truncate_slug_length = 40
-revision_environment = true
+
 version_locations = alembic/versions
 version_path_separator = os
 
-# sqlalchemy.url = %(POSTGRES_DB_URL)s
 
 
 [post_write_hooks]
