--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ docxtpl = "0.16.0"
 python-multipart = "0.0.5"
 xlrd = "1.2.0"
 alembic = "1.9.1"
+sqlalchemy-utils = "0.39.0"
+python-dateutil = "2.8.2"
 
 [tool.poetry.group.lint]
 optional = true
