--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "~3.8"
 fastapi = "0.78.0"
-fastapi-mail = "1.2.2"
+fastapi-mail = "^1.0.0"
 uvicorn = "0.17.6"
 pydantic = {version = "^1.10.2", extras = ["dotenv"]}
 translitua = "1.3.1"
