--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,9 +80,7 @@ ignore_missing_imports = true
 
 
 [tool.pytest.ini_options]
-python_files=test_*
-python_classes=Test*
-python_functions=test_*
+python_classes = "Test*"
 
 norecursedirs = ["venv", ".venv", ".env", "migrations",]
 testpaths = ["tests",]
