EU-80-experimental changed pyproject.toml pytest init section

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,3 +89,4 @@ console_output_style = "progress"
 python_files = "test_*"
 python_classes = "Test*"
 python_functions = "test_*"
+pytest_alembic_tests_folder = "tests/alembic"
