--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ faker = "^15.3.1"
 pydantic-factories = "^1.7.0"
 pytest-alembic = "^0.8.4"
 httpx = "^0.23.0"
+factory-boy = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -84,7 +85,7 @@ ignore_missing_imports = true
 # === Pytest ===
 [tool.pytest.ini_options]
 norecursedirs = ["venv", ".venv", ".env", "migrations"]
-testpaths = "tests"
+testpaths = ["tests",]
 console_output_style = "progress"
 python_files = "test_*"
 python_classes = "Test*"
