--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ xlrd = "1.2.0"
 alembic = "1.9.1"
 sqlalchemy-utils = "0.39.0"
 python-dateutil = "2.8.2"
+pytest-freezegun = "^0.4.2"
 
 [tool.poetry.group.lint]
 optional = true
