--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ xlrd = "1.2.0"
 alembic = "1.9.1"
 sqlalchemy-utils = "0.39.0"
 python-dateutil = "2.8.2"
-pytest-freezegun = "^0.4.2"
+python-dotenv = "^0.21.1"
 
 [tool.poetry.group.lint]
 optional = true
@@ -51,6 +51,7 @@ pydantic-factories = "^1.7.0"
 pytest-alembic = "^0.8.4"
 httpx = "^0.23.0"
 factory-boy = "^3.2.1"
+pytest-freezegun = "^0.4.2"
 
 [build-system]
 requires = ["poetry-core"]
